Quienes Somos seccion

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -47,9 +47,9 @@
 }
 
 #osole-span{
-    padding: 2% 4%; 
+    padding: 1% 4%; 
     font-size: 13px; 
-    font-family: 'Montserrat'; 
+    font-family: 'Montserrat Semibold'; 
     color: #7D7D7D;
     letter-spacing: 1;
 }
