detalles de descuentos

--- a/public/css/page/producto.css
+++ b/public/css/page/producto.css
@@ -207,7 +207,7 @@
     padding: 0px 5px !important;
 }
 
-#cantidad-td,{
+#cantidad-td{
     color: #0099DE !important;
     font-family: 'Montserrat Semibold' !important;
 }
