--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,12 +3,13 @@
 }
 
 #estandar-btn{
-    background: #F14816;
+    background: #F8A900;
     font-size: 13px;
     font-family: 'Montserrat';
     color: #ffffff;
-    border-radius: 5px;
-    margin-top: 3%
+    border-radius: 25px;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 .alert-error{
