--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,10 @@
     outline: none;
 }
 
+#container-fluid{
+    width: 85% !important;
+}
+
 #estandar-btn{
     background: #F8A900;
     font-size: 13px;
@@ -26,6 +30,25 @@
 
 #estandar-btn a{
     color: #595959;
+    font-size: 15px;
+    font-family: 'Montserrat Bold'
+
+}
+
+
+#estandar-btn-otro{
+    background: #FFFFFF;
+    font-size: 13px;
+    font-family: 'Montserrat';
+    color: #F8A900;
+    border: 2px solid #F8A900;
+    border-radius: 25px;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+#estandar-btn-otro a{
+    color: #F8A900;
     font-size: 15px;
     font-family: 'Montserrat Bold'
 
